fix: gl z-index

--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -62,7 +62,7 @@ body {
   left: 0;
   pointer-events: none;
   opacity: 1;
-  z-index: 2;
+  z-index: 1;
   transition: opacity 1s ease;
 }
 
